Update _config.yml and footer.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,14 +5,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
-       <p class="feed-subscribe">
-          <a href="{{ 'feed.xml' | relative_url }}">
-            <svg class="svg-icon orange">
-              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
-            </svg><span>Subscribe</span>
-          </a>
-        </p>
-        <!--<p style="text-align:left;">Hosted on GitHub Pages</p>-->
+        <p style="text-align:left;">Hosted on GitHub Pages — Theme by <a href="https://github.com/jekyll/minima">Jekyll</a></p>
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
@@ -25,7 +18,7 @@
       {%- endif %}
       </div>
       <div class="footer-col">
-        <p style="text-align:right;">&copy; 2020 Loris Bergeron. All rights reserved.</p>
+        <p style="text-align:right;">Copyright &copy; 2020 Loris Bergeron. All rights reserved.</p>
       </div>
     </div>
 
