--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,23 +3,8 @@
 
   <div class="wrapper">
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col">
-        <p style="text-align:left;">Hosted on GitHub Pages — Theme by <a href="https://github.com/jekyll/minima">Jekyll</a></p>
-      {%- if site.author %}
-        <ul class="contact-list">
-          {% if site.author.name -%}
-            <li class="p-name">{{ site.author.name | escape }}</li>
-          {% endif -%}
-          {% if site.author.email -%}
-            <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-          {%- endif %}
-        </ul>
-      {%- endif %}
-      </div>
-      <div class="footer-col">
-        <p style="text-align:right;">Copyright &copy; 2020 Loris Bergeron. All rights reserved.</p>
-      </div>
+    <div class=footer-col-wrapper">
+      <p style="text-align:center;">Copyright &copy; 2020 Loris Bergeron. All rights reserved.</p>
     </div>
 
     <div class="social-links">
