--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="wrapper">
 
     <div class=footer-col-wrapper">
-      <p style="text-align:center;">Copyright &copy; 2019-<script>document.write(new Date().getFullYear())</script> Loris Bergeron. All rights reserved.</p>
+      <p style="text-align:center;">Copyright 2019-<script>document.write(new Date().getFullYear())</script> Loris Bergeron. All rights reserved.</p>
       <p style="text-align:center;">Hosted with &#10084;&#65039; on GitHub Pages — Theme by <a href="https://github.com/jekyll/minima">Jekyll</a></p>
     </div>
 
