Update footer to be compliant with all devices

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
   <div class="wrapper">
 
     <div class=footer-col-wrapper">
-      <p style="text-align:center;">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Loris Bergeron. All rights reserved.</p>
-      <p style="text-align:center;">Hosted with &#10084;&#65039; on GitHub Pages — Theme by <a href="https://github.com/jekyll/minima">Jekyll</a></p>
+      <p style="text-align:center;">&copy; <script>document.write(new Date().getFullYear())</script> Loris Bergeron. All rights reserved.</p>
+      <p style="text-align:center;">Hosted with &#10084;&#65039; on GitHub — Theme by <a href="https://github.com/jekyll/minima">Jekyll</a></p>
     </div>
 
     <div class="social-links">
