--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,15 +2,20 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:description" content="{{ page.subtitle }}" />
+  <meta property="og:image" content="{{ site.url }}/assets/pictures/banner.jpg" />
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   {%- feed_meta -%}
+
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
-  {% if page.header-img %}
-    <meta property="og:image" content="{{ site.url }}/{{ page.header-img }}" />
+
+  {% if page.subtitle %}
+    <meta property="og:description" content="{{ page.subtitle }}" />
+  {% else %}
+    <meta property="og:description" content="{{ site.description }}" />
   {% endif %}
+
   {%- include custom-head.html -%}
 </head>
