--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="{{ site.url }}/assets/pictures/banner.jpg" />
+  <meta name="twitter:image" content="{{ site.url }}/assets/pictures/banner.jpg" />
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   {%- feed_meta -%}
@@ -13,8 +14,10 @@
 
   {% if page.subtitle %}
     <meta property="og:description" content="{{ page.subtitle }}" />
+    <meta name="twitter:description" content="{{ page.subtitle }}">
   {% else %}
     <meta property="og:description" content="{{ site.description }}" />
+    <meta name="twitter:description" content="{{ site.description }}">
   {% endif %}
 
   {%- include custom-head.html -%}
