Enable Do Not Track Umami setting

--- a/_includes/umami-analytics.html
+++ b/_includes/umami-analytics.html
@@ -1,2 +1,5 @@
-<script async defer data-website-id="65a3c6ee-88af-44b8-840f-39b37aa9eccd"
-  src="https://umami-loris-bergeron-blog.herokuapp.com/umami.js"></script>
+<script async defer 
+  data-website-id="65a3c6ee-88af-44b8-840f-39b37aa9eccd"
+  src="https://umami-loris-bergeron-blog.herokuapp.com/umami.js"
+  data-do-not-track="true"
+></script>
