Add Google Site Vertification code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,5 +20,7 @@
     <meta name="twitter:description" content="{{ site.description }}">
   {% endif %}
 
+  <meta name="google-site-verification" content="HT6xU7u48iVCA7X-pwaUn0f3mnlV3-IK1oYXuO1f8ZM" />
+  
   {%- include custom-head.html -%}
 </head>
